--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs=-Xmx3G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.2
+	minecraft_version=20w10a
 	yarn_mappings=7
-	loader_version=0.7.6+build.179
+	loader_version=0.7.8+build.186
 
 # Mod Properties
-	mod_version = 0.2.8
+	mod_version = 0.2.8-20w10a
 	maven_group = fr.arthurbambou
 	archives_base_name = FDLink
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-	fabric_version=0.4.29+build.290-1.15
+	# fabric_version=0.4.29+build.290-1.15
 	javacord_version=3.0.4
